# Intelligent-Transportation-Systems

./: .gitignore  ALGORITHM.md  PRESENTATION.md  README.md  REPORT.md  cctv.csv  edge_surveillance.csv  pyproject.toml
results/: README.md  bengaluru_reproduction.txt  bengaluru_routes_12.geojson  bengaluru_routes_all.geojson  kharagpur_reproduction.txt  kharagpur_routes_12.geojson
scripts/: points_to_edge_csv.py  reproduce_bengaluru.sh  reproduce_kharagpur.sh
src/its_route_planner/: __init__.py  cli.py  demo.py  edge_costs.py  geojson_export.py  graph.py  pareto.py  point_layers.py  road_network.py  search.py
tests/: test_edge_costs.py  test_geojson_export.py  test_pareto.py  test_point_layers.py  test_road_network.py  test_search.py
tests/fixtures/: sample_edge_costs.csv
viewer/: demo.html  index.html  nav-options.js  routes.geojson
